<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        style="@style/std_layout"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            style="@style/CardStyle"
            android:id="@+id/card_point"
            android:layout_marginBottom="@dimen/c_hbottom"
            android:layout_marginTop="@dimen/c_htop">

            <LinearLayout
                style="@style/std_layout"
                android:orientation="horizontal">

                <LinearLayout style="@style/layout_point">

                    <TextView style="@style/team_name"
                        android:text="@string/team_a"
                        android:textAllCaps="true"/>

                    <TextView
                        android:id="@+id/team_a_score"
                        style="@style/team_point"
                        android:text="@string/team_point"/>

                    <Button
                        style="@style/btn_style"
                        android:onClick="addForTeamA"
                        android:text="@string/btn_point" />
                </LinearLayout>

                <View style="@style/view_point" />

                <LinearLayout style="@style/layout_point">

                    <TextView style="@style/team_name"
                        android:text="@string/team_b"
                        android:textAllCaps="true"/>

                    <TextView
                        android:id="@+id/team_b_score"
                        style="@style/team_point"
                        android:text="@string/team_point"/>

                    <Button
                        style="@style/btn_style"
                        android:onClick="addForTeamB"
                        android:text="@string/btn_point" />
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView style="@style/CardStyle">

            <LinearLayout
                style="@style/std_layout"
                android:orientation="vertical">

                <LinearLayout
                    style="@style/std_layout"
                    android:layout_margin="@dimen/c_hbottom"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView"
                        style="@style/bp_head"
                        android:layout_weight="2"
                        android:text="@string/team_name" />

                    <TextView
                        style="@style/bp_head"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/game" />

                    <TextView
                        style="@style/bp_head"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/set" />
                </LinearLayout>

                <LinearLayout
                    style="@style/std_layout"
                    android:layout_margin="@dimen/c_hbottom"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/bp_row"
                        android:layout_weight="2"
                        android:text="@string/team_a"
                        android:textAllCaps="true"/>

                    <TextView
                        android:id="@+id/game_view_A"
                        style="@style/bp_row"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/team_point" />

                    <TextView
                        android:id="@+id/set_view_A"
                        style="@style/bp_row"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/team_point" />
                </LinearLayout>

                <LinearLayout
                    style="@style/std_layout"
                    android:layout_margin="@dimen/c_hbottom"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/bp_row"
                        android:layout_weight="2"
                        android:text="@string/team_b"
                        android:textAllCaps="true"/>

                    <TextView
                        android:id="@+id/game_view_B"
                        style="@style/bp_row"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/team_point" />

                    <TextView
                        android:id="@+id/set_view_B"
                        style="@style/bp_row"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/team_point" />
                </LinearLayout>

            </LinearLayout>


        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView style="@style/CardStyle">
            <Button
                style="@style/btn_style"
                android:onClick="resetScore"
                android:text="@string/btn_reset" />
        </android.support.v7.widget.CardView>

    </LinearLayout>


</android.support.v4.widget.NestedScrollView>